Added first figure.

--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -6,6 +6,8 @@
 \usepackage{color}
 \usepackage{verbatim}
 \usepackage{times}
+\usepackage{afterpage}
+
 
 
 % shortcuts
@@ -47,18 +49,18 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
 \begin{abstract}
 
     The recently discovered fast radio bursts are a new class of radio
-    transient that, due to thier high dispersion from interviening plasma,
+    transient that, due to their high dispersion from intervening plasma,
     have been interpreted as
-    origionating from cosmological distances.  The rate of fast radio bursts
+    originating from cosmological distances.  The rate of fast radio bursts
     has been estimated to be as high as 10\,000 per sky per day.  If
     cosmological, these events should trace the large-scale structure of the
-    Universe in some way. Furthermore, because the disperion measure (DM) can be
+    Universe in some way. Furthermore, because the dispersion measure (DM) can be
     used as a proxy for radial distance (like redshift),
-    clustering can be studied in three dimensions. Due to inhomogenaities in
+    clustering can be studied in three dimensions. Due to inhomogeneities in
     the plasma's density dispersion measure is an imperfect proxy or radial
     distance and we show that this leads to additional clustering terms---the
     dispersion measure space distortions. We calculate the DM space
-    powerspectra for a toy model of electron and FRB clustering and show that
+    power spectra for a toy model of electron and FRB clustering and show that
     the clustering signal could be detected in a survey of \red{10000} FRB
     events, as is expected to be produced by the Canadian Hydrogen Intensity
     Mapping Experiment.
@@ -73,7 +75,7 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
 \section{Density perturbations in dispersion measure space}
 
 The dispersion measure of a signal observed in some angular direction $\hat{n}$ and
-originating from comoving radial distance $\chi$ is
+originating from co moving radial distance $\chi$ is
 \begin{equation}
     {\rm DM}(\hat{n}, \chi) = \int_0^{\chi} \ud\chi' a(\chi)^2
         n_e(\hat{n}\chi', \chi').
@@ -81,13 +83,13 @@ originating from comoving radial distance $\chi$ is
 Here
 $n_e(\vec{x}, \chi)$ is the free electron density as a function of location and
 conformal time. Note that we use $\chi$ as our radial distance and time
-coordinate, as opposed to redshift which is more approprite for spectroscopic
+coordinate, as opposed to redshift which is more appropriate for spectroscopic
 applications. We model the cosmological 
-electron density as containing a homogenious part
+electron density as containing a homogeneous part
 and perturbations
 $n_e(\vec x, \chi) = \bar{n}_e(\chi) \left[1 + \delta_e(\vec x, \chi)\right]$.  \red{We take
 all of the electrons to be in a diffuse ionized state such that
-$\bar{n}_e(\chi) = \bar{n}_{e0} / a(\chi)^3$ (not nessisary).} The dispersion
+$\bar{n}_e(\chi) = \bar{n}_{e0} / a(\chi)^3$ (not necessary).} The dispersion
 measure is thus
 \begin{equation}
     {\rm DM}(\hat n, \chi) = \int_0^\chi \ud\chi' a(\chi')^2 \bar{n}_e(\chi')
@@ -120,7 +122,7 @@ in a volume element is the same in both spaces:
 \label{e:density}
 n_{fs}(\vec x_s) \ud^3\vec x_s = n_{f}(\vec x) \ud^3\vec x.
 \end{equation}
-We split the density into a homogenious part plus perturbations,
+We split the density into a homogeneous part plus perturbations,
 \begin{equation}
     \bar{n}_{fs}(\chi_s)\left[ 1 + \delta_{fs}(\vec x_s)\right] \ud^3\vec x_s
     = \bar{n}_{f}(\chi)\left[ 1 + \delta_f(\vec x)\right] \ud^3\vec x.
@@ -139,7 +141,7 @@ Therefore,
        \label{e:nfs}
 \end{align}
 
-The jacobian in spherical coordinates is
+The Jacobian in spherical coordinates is
 \begin{align}
 \left| \frac{\ud^3\vec x}{\ud^3\vec x_s} \right|
     &= \frac{\ud \chi}{\ud \chi_s}\frac{\chi^2}{\chi_s^2}\\
@@ -161,21 +163,28 @@ we obtain
         \int_0^\chi \ud \chi' \delta_e(\hat n \chi').
 \end{equation}
 In the equation above, the $-\delta_e$ term is most analogous to the Kaiser
-redshift space distortions.  It is a dillution of tracers in DM space due to an
+redshift space distortions.  It is a dilution of tracers in DM space due to an
 excess of electrons in between the tracers. However we note that this term is isotropic
-in cotrast to Kaiser.  This is because any wave vector electron perturbation
+in contrast to Kaiser.  This is because any wave vector electron perturbation
 causes DM space distortions, whereas the radial velocities that cause
-redshift space distortions are only sourced by perterbations with radial wave
+redshift space distortions are only sourced by perturbations with radial wave
 vectors.
 
 The $\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}$ arise since the
 misinterpretation of the radial distance causes the observed tracer density to
 be compared to the wrong background density. The $\frac{2}{\chi}$ term is
 caused by a misinterpretation of angular distances when the radial distance is
-mismeasured.  Both term are in-prociple present in redshift space but are
-negligable. Because radial veolocities are only sourced by modes with large
-radial wave vector, there is near perfect cancelation along the line of sight
+mis measured.  Both terms are in-principle present in redshift space but are
+negligible. Because radial velocities are only sourced by modes with large
+radial wave vector, there is near perfect cancellation along the line of sight
 and thus is very little net error in radial distance.
+
+For brevity in the following sections we define the coefficient of the integral
+term as
+\begin{equation}
+    A(\chi) \equiv \frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
+    + \frac{2}{\chi}.
+\end{equation}
 
 \section{Two-point statistics in DM space}
 
@@ -183,7 +192,7 @@ Unlike in redshift-space distortions, Equation~\ref{e:delta_s} does not have a
 simple form in harmonic space. The equation's third term couples harmonic modes
 and thus the two-point statistics cannot be phrased as a simple power spectrum.
 We will phrase the two point statistic in terms of $C^{ss}_\ell(\chi,\chi')$, which is
-the cross-correlation angular power-spectrum of the DM space overdensity
+the cross-correlation angular power-spectrum of the DM space over-density
 on shells at $\chi$ and $\chi'$.
 \begin{align}
     &\delta_{\ell\ell'}\delta_{mm'}C^{ss}_\ell(\chi, \chi') = \nonumber \\
@@ -209,10 +218,10 @@ dependance, the angular cross power spectrum of such tracers is
     &= \frac{2}{\pi}
 \int_0^\infty\ud k k^2 j_\ell(k\chi) j_{\ell}(k\chi')P_{xy}(k).
 \end{align}
-In reality the powerspectrum evolves on the order of a (conformal) Hubble time.
+In reality the power spectrum evolves on the order of a Hubble time.
 The angular cross-correlations will be very small unless $\chi$ and $\chi'$ are
 within a few correlation lengths of one another, roughly a few hundred
-megaparsecs.  The evolution of the power-spectrum is negligable over these time
+megaparsecs.  The evolution of the power-spectrum is negligible over these time
 differences which leads to a straight forward way to include the evolution of
 the perturbations:
 \begin{align}
@@ -269,10 +278,11 @@ C^{ss}_\ell(\chi,\chi') = &~
     \nonumber\\
     & +
     \frac{2}{\pi}
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
-    + \frac{2}{\chi} \right)
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
-    + \frac{2}{\chi'} \right)
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
+    %+ \frac{2}{\chi} \right)
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
+    %+ \frac{2}{\chi'} \right)
+    A(\chi) A(\chi')
     \int_0^\chi\ud\chi''
     \int_0^{\chi'}\ud\chi'''
     \int_0^\infty\ud k k^2 j_\ell(k\chi'') j_{\ell}(k\chi''')
@@ -280,8 +290,9 @@ C^{ss}_\ell(\chi,\chi') = &~
     \nonumber\\
     & +
     \frac{2}{\pi}
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
-    + \frac{2}{\chi} \right)
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
+    %+ \frac{2}{\chi} \right)
+    A(\chi)
     \int_0^\chi\ud\chi''
     \int_0^\infty\ud k k^2 
     j_\ell(k\chi') j_{\ell}(k\chi'')
@@ -293,8 +304,9 @@ C^{ss}_\ell(\chi,\chi') = &~
     \nonumber\\
     & +
     \frac{2}{\pi}
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
-    + \frac{2}{\chi'} \right)
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
+    %+ \frac{2}{\chi'} \right)
+    A(\chi')
     \int_0^{\chi'}\ud\chi''
     \int_0^\infty\ud k k^2 
     j_\ell(k\chi) j_{\ell}(k\chi'')
@@ -304,17 +316,19 @@ C^{ss}_\ell(\chi,\chi') = &~
     %- P_{fe}(k, (\chi + \chi'')/2) 
     %\right].
 \end{align}
-Here, espressions like $P_{[ff + ee - 2ef]}$ are short hand for $P_{ff} +
+\end{widetext}
+Here, expressions such as $P_{[ff + ee - 2ef]}$ are short hand for $P_{ff} +
 P_{ee} - 2P_{ef}$.
 
-Equation~\ref{e:Clss} can be simplifed substantially by adopting the small
+Equation~\ref{e:Clss} can be simplified substantially by adopting the small
 angle and Limber approximations \citep{extened_limber}.  The small angle
-approximation eliminates the $k$ integral over sperical Bessel functions, replacing it
-with a Forrier transform, and is valid for $\ell \gg 1$. The Limber
-approximation assumes that only modes with small radial component of thier wave
+approximation eliminates the $k$ integral over spherical Bessel functions, replacing it
+with a Fourier transform, and is valid for $\ell \gg 1$. The Limber
+approximation assumes that only modes with small radial component of their wave
 vector contribute to the radial integrals and is valid if the power spectra
 evolve slowly compared to the correlation length (which has already been
 assumed). With these approximations we have
+\begin{comment}
 \begin{align}
 C^{ss}_\ell(\chi, \chi') \approx&~
     \frac{1}{\bar\chi^2}
@@ -328,57 +342,142 @@ C^{ss}_\ell(\chi, \chi') \approx&~
         %- 2 P_{ef}(\sqrt{k_\parallel^2 + \ell^2/\bar\chi^2}, \bar\chi)
         %\right]
     \nonumber \\ &+
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
-    + \frac{2}{\chi} \right)
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
-    + \frac{2}{\chi'} \right)
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
+    %+ \frac{2}{\chi} \right)
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
+    %+ \frac{2}{\chi'} \right)
+    A(\chi) A(\chi')
     \int_0^{\chi_{\rm min}}\ud\chi''
     \frac{1}{\chi^{\prime\prime 2}}
     P_{ee}((\ell + 1/2)/\chi'',\chi'')
     \nonumber \\ &+
-    \left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi_{\max}}
-    + \frac{2}{\chi_{\max}} \right)
-    \frac{1}{\chi_{\min}^2}
+    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi_{\max}}
+    %+ \frac{2}{\chi_{\max}} \right)
+    \frac{A(\chi_{\max})}{\chi_{\min}^2}
     P_{[ee - ef]}((\ell + 1/2)/\chi_{\min}, \chi_{\min}),
         %\left[
         %    P_{ee}(\ell/\chi_{\min}, \chi_{\min})
         %    - P_{fe}(\ell/\chi_{\min}, \chi_{\min})
         %\right],
 \end{align}
-where $\chi_{\min} \equiv \min(\chi, \chi')$ and $\chi_{\max} \equiv \max(\chi,
-\chi')$ .  We've found that these approximations are excelent for $\ell > 10$
+\end{comment}
+\begin{align}
+    &C^{ss}_\ell(\chi, \chi') \approx
+    \nonumber \\ & \quad
+    \frac{1}{\bar\chi^2}
+        \int_{-\infty}^\infty\frac{\ud k_\parallel}{(2 \pi)} 
+        e^{i k_\parallel (\chi - \chi')}
+        P_{[ee + ff - 2ef]}
+        (\sqrt{k_\parallel^2 + \nu^2/\bar\chi^2}, \bar\chi)
+    \nonumber \\ & \quad +
+    A(\chi) A(\chi')
+    \int_0^{\chi_{\rm min}}\ud\chi''
+    \frac{1}{\chi^{\prime\prime 2}}
+    P_{ee}(\nu/\chi'',\chi'')
+    \nonumber \\ & \quad +
+    \frac{A(\chi_{\max})}{\chi_{\min}^2}
+    P_{[ee - ef]}(\nu/\chi_{\min}, \chi_{\min}),
+\end{align}
+where $\nu\equiv\ell + 1/2$, $\chi_{\min} \equiv \min(\chi, \chi')$,
+and $\chi_{\max} \equiv \max(\chi,
+\chi')$ .  We've found that these approximations are excellent for $\ell
+\gtrsim 10$
 and use this form for the remainder of the paper.
-\end{widetext}
 
-\section{Observational considerations}
+\subsection{Modelling the angular power-spectrum}
+
+Description of the input power-spectra, $\bar n_f$ and figures.
+Figure~\ref{f:n_f}
+
+\begin{figure}
+    \includegraphics[scale=0.42]{"figures/n_f"}
+    \caption{
+        \label{f:n_f}
+        \red{Need to fix normalization of top panel.}
+    }
+\end{figure}
+
+
+\section{Measurement}
+
 
 DM contribution intrinsic to the source will have a few effects: There will be
 an offset which will change the DM-distance relation in some way that can
-hopefully be characterized. Also there will be a stocastic piece which will
+hopefully be characterized. Also there will be a stochastic piece which will
 smear out DM-distance relations and limit the effective width of the radial
-shells. Detailed considereation of these effects is beyond the scope of this
+shells. Detailed consideration of these effects is beyond the scope of this
 work but to crudely deal with this, we don't consider any $\chi - \chi'$
-smaller than \red{$10\,{\rm MPc}/h$}.
+smaller than \red{$100\,{\rm MPc}/h$}.
 
 Contributions from local Universe probably not an issue. Can be measure by
 other means and subtracted off.
 
 Tomography is exact.  Get excellent separation of scales, unlike lensing.
+The integral over $\chi$ couples many scales. In particular small scales (which
+are difficult to model) will
+be coupled to large angular scales by screens near the observer.  However
+because tomography is exact, it would be possible to set up estimators that
+decouple these scales, for instance by estimating the difference in power
+between radial shells.  For this reason we start all radial integrals as
+$\chi = 500\,{\rm MPc}/h$, which saves us from the difficulties in modelling the
+small scale power.
 
-\section{Detectability}
 
-\section{Conclustions}
+\subsection{Detectability}
+
+Here we present sensitivity estimates for a survey \ldots
+
+We assume that the survey will be shot noise dominated as would be the case for
+an initial detection.  The noise powerspectrum on a shells with of width
+$\Delta \chi$ is
+\begin{equation}
+    C^N_{\ell, ij} = \frac{\delta_{ij}}{\bar n_f(\chi_i)\chi_i^2\Delta\chi},
+\end{equation}
+Here, to indicate that we are now working with quantities binned in the radial
+direction instead of
+continuous functions, we've switched to $C_{\ell,ij}$ over 
+$C_\ell(\chi, \chi')$. The error bar on the angular
+cross-power spectrum is then
+\begin{align}
+    (\Delta{C^{ss}_{\ell,ij}})^2 = 
+    \sqrt{\frac{1}{\ell(\ell + 1)\Delta \ell f_{\rm sky}}}
+        \left[C^N_{\ell,ii} C^N_{\ell,jj} +  (C^N_{\ell,ij})^2\right],
+\end{align}
+where the second term in brackets only contributes for $i = j$.
+
+To give an idea of the sensitivity of the survey, we collapse
+$C^{ss}_{\ell,ij}$ to a single function of $\ell$ by taking a weighted average
+of all pairs of radial bins. We use bin widths of $100\,{\rm MPc}/h$ over the
+range $500\,{\rm MPc}/h$ to $3600\,{\rm MPc}/h$.
+For weights in the radial bin average, we use the signal to noise-squared
+at $\ell=100$, which extracts all the signal to noise at that $\ell$.
+We exclude the $i = j$ bin pairs due to
+the presumed observational complications discussed in the previous section.
+This effectively discards the contribution from the local term.
+
+\section{Discussion and conclusions}
+
+
+\begin{acknowledgments}
+
+We would like to thank Ue-Li Pen and Mathew McQuinn for helpful discussions.
+%
+KWM is supported by the Canadian Institute for Advanced Research, Global Scalars
+Program.
+
+\end{acknowledgments}
 
 
 
-
-
+\bibliography{dm_space}
 
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%            Scrap           %%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
 
 \begin{widetext}
 
