--- a/writeup/dm_space_distortions.tex
+++ b/writeup/dm_space_distortions.tex
@@ -30,8 +30,20 @@
 \newcommand{\blue}{\textcolor{blue}}
 \newcommand{\green}{\textcolor{green}}
 
+% Command to consume spaces and newlines.  Used to PRL style sections.
+\makeatletter
+\def\ignorespacesandimplicitepars{%
+  \begingroup
+  \catcode13=10
+  \@ifnextchar\relax
+    {\endgroup}%
+    {\endgroup}%
+}
 
-\renewcommand{\section}[1]{\emph{#1}---\ignorespaces}
+\makeatletter
+
+
+\renewcommand{\section}[1]{\emph{#1}---\ignorespacesandimplicitepars}
 \renewcommand{\subsection}[1]{}
 
 
@@ -56,12 +68,12 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
     transient that, due to their high dispersion from intervening plasma,
     have been interpreted as
     originating from cosmological distances.  The rate of fast radio bursts
-    has been estimated to be as high as 10\,000 per sky per day.  If
+    has been estimated to be several thousand over the whole sky per day.  If
     cosmological, these events should trace the large-scale structure of the
     Universe in some way. Furthermore, because the dispersion measure (DM) can be
     used as a proxy for radial distance (like redshift),
     clustering can be studied in three dimensions. Due to inhomogeneities in
-    the plasma's density dispersion measure is an imperfect proxy or radial
+    the plasma's density dispersion measure is an imperfect proxy for radial
     distance and we show that this leads to additional clustering terms---the
     dispersion measure space distortions. We calculate the DM space
     power spectra for a toy model of electron and FRB clustering and show that
@@ -74,39 +86,46 @@ Columbia, Vancouver, BC, Canada, V6T 1Z1}
 \maketitle
 
 \section{Introduction}
+
 The clustering of matter on large scales has been
 heralded as the next great probe the Universe after the cosmic microwave
 background (CMB). The large-scale structure in principle contains far more
 information than the CMB, because it can be studied in three dimensions.
 Traditionally the redshift of spectral lines caused by the Hubble flow has
-been employed to measure position in the radial direction. Such redshift
+been employed to measure radial distance. Such redshift
 surveys have now aggregated the positions of millions of galaxies into three
-dimensional density maps exposing a rich structure of clusters, filaments,
+dimensional density maps, exposing a rich structure of clusters, filaments,
 walls and voids.
 
+% This paragraph needs to be reorganized.
 However, redshift is not the only measure of radial distance. In particular,
 dispersion of electromagnetic signals due to intervening plasma
 is readily measured from fast radio bursts (FRB) which are a class
-of radio transient first reported in \citet{lorimer}. The dispersion measure
+of radio transient first reported in \citet{lorimer}. There have since been 
+\ldots such bursts detected \citep{all_bursts} and total rate of bursts
+been estimated to be \ldots. The dispersion measure
 (DM) is a line-of-site integral of the free electron density and can thus be
 used as a distance estimate.
-% IF COSMOLOGICAL!!
+If the progenitors of these bursts are at cosmological distances, with the
+majority of the dispersion caused by electrons in the inter-galactic medium,
+then the average DM-distance relation can be modelled \citep{someone}.
 
-Neither redshift or dispersion measure are perfect proxies for radial distance.
+Neither redshift nor dispersion measure are perfect proxies for radial distance.
 Redshifts are systematically biased by the peculiar velocities of the object
 relative to the Hubble flow. This leads to additional apparent clustering 
 in redshift
 space which was first calculated by \citet{kaiser} using linear theory.
-
 Similarly, distance estimates from dispersion measure will be biased by
 inhomogeneities in the electron density, again leading to additional apparent
 clustering of sources in dispersion measure space.  In this letter we calculate
-these DM space distortions and shaw that they could 
-be usefully measured in a
-survey detecting as few as 10\,000 fast radio bursts.
+these DM space distortions and consider the detectability of the signal by
+upcoming surveys.
 
 
-\section{Density perturbations in dispersion measure space}
+%\section{Density perturbations in dispersion measure space}
+\section{Clustering in dispersion measure space}
+
+
 The dispersion measure of a signal observed in some angular direction $\hat{n}$ and
 originating from comoving radial distance $\chi$ is
 \begin{equation}
@@ -218,7 +237,9 @@ term as
     + \frac{2}{\chi}.
 \end{equation}
 
-\section{Two-point statistics}
+
+%\section{Two-point statistics}
+
 Large-scale structure is usually studied through it two-point statistics, most
 commonly the power-spectrum, $P(k)$.
 Unlike in redshift-space distortions, Equation~\ref{e:delta_s} does not have a
@@ -361,39 +382,6 @@ approximation assumes that only modes with small radial component of their wave
 vector contribute to the radial integrals and is valid if the power spectra
 evolve slowly compared to the correlation length (which has already been
 assumed). With these approximations we have
-\begin{comment}
-\begin{align}
-C^{ss}_\ell(\chi, \chi') \approx&~
-    \frac{1}{\bar\chi^2}
-        \int_{-\infty}^\infty\frac{\ud k_\parallel}{(2 \pi)} 
-        e^{i k_\parallel (\chi - \chi')}
-        P_{[ee + ff - 2ef]}
-        (\sqrt{k_\parallel^2 + \ell(\ell + 1)/\bar\chi^2}, \bar\chi)
-        %\left[
-        %P_{ee}(\sqrt{k_\parallel^2 + \ell^2/\bar\chi^2}, \bar\chi)
-        %+ P_{ff}(\sqrt{k_\parallel^2 + \ell^2/\bar\chi^2}, \bar\chi)
-        %- 2 P_{ef}(\sqrt{k_\parallel^2 + \ell^2/\bar\chi^2}, \bar\chi)
-        %\right]
-    \nonumber \\ &+
-    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi}
-    %+ \frac{2}{\chi} \right)
-    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi'}
-    %+ \frac{2}{\chi'} \right)
-    A(\chi) A(\chi')
-    \int_0^{\chi_{\rm min}}\ud\chi''
-    \frac{1}{\chi^{\prime\prime 2}}
-    P_{ee}((\ell + 1/2)/\chi'',\chi'')
-    \nonumber \\ &+
-    %\left(\frac{1}{\bar{n}_f}\frac{\ud \bar{n}_f}{\ud \chi_{\max}}
-    %+ \frac{2}{\chi_{\max}} \right)
-    \frac{A(\chi_{\max})}{\chi_{\min}^2}
-    P_{[ee - ef]}((\ell + 1/2)/\chi_{\min}, \chi_{\min}),
-        %\left[
-        %    P_{ee}(\ell/\chi_{\min}, \chi_{\min})
-        %    - P_{fe}(\ell/\chi_{\min}, \chi_{\min})
-        %\right],
-\end{align}
-\end{comment}
 \begin{align}
     &C^{ss}_\ell(\chi, \chi') \approx
     \nonumber \\ & \quad
@@ -410,6 +398,7 @@ C^{ss}_\ell(\chi, \chi') \approx&~
     \nonumber \\ & \quad +
     \frac{A(\chi_{\max})}{\chi_{\min}^2}
     P_{[ee - ef]}(\nu/\chi_{\min}, \chi_{\min}),
+    \label{e:Clss_limber}
 \end{align}
 where $\nu\equiv\ell + 1/2$, $\chi_{\min} \equiv \min(\chi, \chi')$,
 and $\chi_{\max} \equiv \max(\chi,
@@ -419,6 +408,7 @@ and use this form for the remainder of the paper.
 
 
 \section{Modeling and measurement}
+
 There are a number of effects that will complicate the measurement of the
 above calculated angular power spectrum by a real survey of dispersion 
 measures.  The first is
@@ -429,11 +419,51 @@ which will contribute to the dispersion measure. However, this is only a
 single function of $\hat n$  which can presumably be well
 measured. In addition, this function could in principal be well characterized
 by independent data such as observations of pulsars.  As such, the local
-contribution is unlikely to be a limiting obstacle.
+contribution is unlikely to be a limiting obstacle. \red{cite geansler paper?}
 
 More concerning is the dispersion from the burst progenitor's environment
-as well as the halo in which it resides.
+as well as the halo in which it resides. These electrons will presumably be
+clustered around the burst progenitor on scales far smaller than DM space
+structure maps and thus are not accounted for in the $\delta_e$--$\delta_f$
+correlations included in the above formalism.  This will have a mean
+contribution, common to all bursts and which may be epoch dependant, which will
+modify the mean DM--distance relation. This will need to be calibrated in some
+why or else fit with nuisance parameters during parameter estimation.  There
+will also be a stochastic piece which varies from burst to burst.  This will
+limit the precision at which $\chi_s$ can be measured, thus limiting the
+resolution of DM space density maps in the radial direction.
 
+Detailed treatment of these complications is beyond the scope of the current
+work. The magnitude of the contribution from the progenitor is at present
+unconstrained by data. To crudely deal with it here we use relatively large 
+$\chi$ bins of $100\,{\rm MPc}/h$ in sensitivity estimates.
+
+The second term in Equation~\ref{e:Clss_limber} is an integral that mixes
+many spacial scales, small scales from smaller radial distance and larger
+scales from greater distances. The mixing of scales complicates the
+interpretation of measurements, since structure formation on scales smaller
+than $\sim10\,{\rm MPc}/h$ is non-linear and hard to model. A similar issue
+exists in the field of weak gravitational lensing, where the formula for the
+angular power spectrum has a similar form.  However in lensing a kernel in
+the line-of-sight integral, arising from geometric effects, suppresses the
+contribution from small distances, partially alleviating the issue.
+
+There is an advantage to the lack of kernel in the DM space integral term.
+Lensing tomography---the use of sources at multiple redshifts to unmix
+spatial scales---is complicated by the kernel. The kernel's shape depends on
+the source redshift, reweighting the line of sight and
+making tomography inexact.  In contrast the integrand in the integral
+term is completely independent of the limit of integration, meaning
+contributions from different parts of the line of sight (and thus different
+spatial scales) can be separated exactly. Again, a detailed study of DM space
+tomography is beyond the scope of this work.  The avoid our results being
+sensitive to the hard-to-model small scales, we assume that the contribution to the
+integral term from radial distances $\chi'' < 500\,{\rm MPc}/h$ are well
+measured by the correlations with these radial slices. We thus neglect the
+information from these slices in our sensitivity measurements and ignore
+contributions to the integral term from below this distance. The smallest
+spatial scale that contributes the our plotted angular power spectra out to
+$\ell=1000$ is thus $k=2\,h/{\rm MPc}$.
 
 Description of the input power-spectra, $\bar n_f$ and figures.
 Figure~\ref{f:n_f}, Figure~\ref{f:terms}.
@@ -460,42 +490,9 @@ Figure~\ref{f:n_f}, Figure~\ref{f:terms}.
     }
 \end{figure}
 
-
-
-In this section we discuss some systematic effects that would affect a real
-survey of dispersion measures, complicating measurement. We then estimate the
-sensitivity of such a survey.
-
-\subsection{Systematics}
-
-DM contribution intrinsic to the source will have a few effects: There will be
-an offset which will change the DM-distance relation in some way that can
-hopefully be characterized. Also there will be a stochastic piece which will
-smear out DM-distance relations and limit the effective width of the radial
-shells. Detailed consideration of these effects is beyond the scope of this
-work but to crudely deal with this, we don't consider any $\chi - \chi'$
-smaller than \red{$100\,{\rm MPc}/h$}.
-
-Contributions from local Universe probably not an issue. Can be measure by
-other means and subtracted off.
-
-Tomography is exact.  Get excellent separation of scales, unlike lensing.
-The integral over $\chi$ couples many scales. In particular small scales (which
-are difficult to model) will
-be coupled to large angular scales by screens near the observer.  However
-because tomography is exact, it would be possible to set up estimators that
-decouple these scales, for instance by estimating the difference in power
-between radial shells.  For this reason we start all radial integrals as
-$\chi = 500\,{\rm MPc}/h$, which saves us from the difficulties in modelling the
-small scale power.
-
-
-\subsection{Detectability}
-
-Here we present sensitivity estimates for a survey \ldots
-
-We assume that the survey will be shot noise dominated as would be the case for
-an initial detection.  The noise powerspectrum on a shells with of width
+In first measurements of the angular power spectra, uncertainty will be
+dominated by the finite number of observed dispersion measures, or shot noise.
+The noise power spectrum on a shells with of width
 $\Delta \chi$ is
 \begin{equation}
     C^N_{\ell, ij} = \frac{\delta_{ij}}{\bar n_f(\chi_i)\chi_i^2\Delta\chi},
@@ -512,16 +509,21 @@ cross-power spectrum is then
 \end{align}
 where the second term in brackets only contributes for $i = j$.
 
-To give an idea of the sensitivity of the survey, we collapse
+Here we consider the sensitivity of a survey with a total of $10^4$ dispersion
+measures from FRBs distributed uniformly over half the sky. This is in rough
+approximation to what could be achieved by the Canadian Hydrogen Intensity
+Mapping Experiment's now funded FRB instrument over a three year survey
+\citep{who}.
+To give an idea of the overall sensitivity of the survey, we collapse
 $C^{ss}_{\ell,ij}$ to a single function of $\ell$ by taking a weighted average
 of all pairs of radial bins. We use bin widths of $100\,{\rm MPc}/h$ over the
 range $500\,{\rm MPc}/h$ to $3500\,{\rm MPc}/h$.
-For weights in the radial bin average, we use the signal to uncertainty-squared
-at $\ell=100$, which extracts all the signal to noise at that $\ell$ and much
-of it at other multipoles.
-We exclude the $i = j$ bin pairs due to
-the presumed observational complications discussed in the previous section.
-This effectively discards the contribution from the local term. This is shown
+For weights in the radial bin average, we use the signal to noise-squared
+at $\ell=100$, which maximizes the signal to noise at that $\ell$ and
+is near optimal at other multipoles.
+We exclude the $i = j$ bin pairs
+as they would be contaminated by noise bias in a real survey.
+This effectively discards the contribution from the local term. The result is shown
 in Figure~\ref{f:sensitivity}.
 
 \begin{figure}
@@ -535,9 +537,8 @@ in Figure~\ref{f:sensitivity}.
     }
 \end{figure}
 
-
-
 \section{Discussion and conclusions}
+
 
 
 \begin{acknowledgments}
